static/psi4manual/1.1.0/_sources/api/psi4.core.SuperFunctional.rst.txt


psi4.core.SuperFunctional
=========================

.. currentmodule:: psi4.core

.. autoclass:: SuperFunctional
   :show-inheritance:

   
     
   

   
   
   

   
   

   .. rubric:: Methods Summary

   .. autosummary::
   
      ~SuperFunctional.add_c_functional
      ~SuperFunctional.add_x_functional
      ~SuperFunctional.allocate
      ~SuperFunctional.ansatz
      ~SuperFunctional.blank
      ~SuperFunctional.c_alpha
      ~SuperFunctional.c_functional
      ~SuperFunctional.c_omega
      ~SuperFunctional.c_os_alpha
      ~SuperFunctional.c_ss_alpha
      ~SuperFunctional.citation
      ~SuperFunctional.deriv
      ~SuperFunctional.description
      ~SuperFunctional.is_c_hybrid
      ~SuperFunctional.is_c_lrc
      ~SuperFunctional.is_c_scs_hybrid
      ~SuperFunctional.is_gga
      ~SuperFunctional.is_meta
      ~SuperFunctional.is_x_hybrid
      ~SuperFunctional.is_x_lrc
      ~SuperFunctional.max_points
      ~SuperFunctional.name
      ~SuperFunctional.print_detail
      ~SuperFunctional.print_out
      ~SuperFunctional.set_c_alpha
      ~SuperFunctional.set_c_omega
      ~SuperFunctional.set_c_os_alpha
      ~SuperFunctional.set_c_ss_alpha
      ~SuperFunctional.set_citation
      ~SuperFunctional.set_deriv
      ~SuperFunctional.set_description
      ~SuperFunctional.set_max_points
      ~SuperFunctional.set_name
      ~SuperFunctional.set_x_alpha
      ~SuperFunctional.set_x_omega
      ~SuperFunctional.test_functional
      ~SuperFunctional.value
      ~SuperFunctional.x_alpha
      ~SuperFunctional.x_functional
      ~SuperFunctional.x_omega

   
   

   
   
   

   
   

   .. rubric:: Methods Documentation

   
   .. automethod:: add_c_functional
   .. automethod:: add_x_functional
   .. automethod:: allocate
   .. automethod:: ansatz
   .. automethod:: blank
   .. automethod:: c_alpha
   .. automethod:: c_functional
   .. automethod:: c_omega
   .. automethod:: c_os_alpha
   .. automethod:: c_ss_alpha
   .. automethod:: citation
   .. automethod:: deriv
   .. automethod:: description
   .. automethod:: is_c_hybrid
   .. automethod:: is_c_lrc
   .. automethod:: is_c_scs_hybrid
   .. automethod:: is_gga
   .. automethod:: is_meta
   .. automethod:: is_x_hybrid
   .. automethod:: is_x_lrc
   .. automethod:: max_points
   .. automethod:: name
   .. automethod:: print_detail
   .. automethod:: print_out
   .. automethod:: set_c_alpha
   .. automethod:: set_c_omega
   .. automethod:: set_c_os_alpha
   .. automethod:: set_c_ss_alpha
   .. automethod:: set_citation
   .. automethod:: set_deriv
   .. automethod:: set_description
   .. automethod:: set_max_points
   .. automethod:: set_name
   .. automethod:: set_x_alpha
   .. automethod:: set_x_omega
   .. automethod:: test_functional
   .. automethod:: value
   .. automethod:: x_alpha
   .. automethod:: x_functional
   .. automethod:: x_omega

   
   
