static/psi4manual/1.2.1/_sources/api/psi4.core.SuperFunctional.rst.txt
SuperFunctional
===============

.. currentmodule:: psi4.core

.. autoclass:: SuperFunctional
   :show-inheritance:

   .. rubric:: Methods Summary

   .. autosummary::

      ~SuperFunctional.XC_build
      ~SuperFunctional.add_c_functional
      ~SuperFunctional.add_x_functional
      ~SuperFunctional.allocate
      ~SuperFunctional.ansatz
      ~SuperFunctional.blank
      ~SuperFunctional.c_alpha
      ~SuperFunctional.c_functional
      ~SuperFunctional.c_functionals
      ~SuperFunctional.c_omega
      ~SuperFunctional.c_os_alpha
      ~SuperFunctional.c_ss_alpha
      ~SuperFunctional.citation
      ~SuperFunctional.compute_functional
      ~SuperFunctional.deriv
      ~SuperFunctional.description
      ~SuperFunctional.grac_alpha
      ~SuperFunctional.grac_beta
      ~SuperFunctional.grac_shift
      ~SuperFunctional.is_c_hybrid
      ~SuperFunctional.is_c_lrc
      ~SuperFunctional.is_c_scs_hybrid
      ~SuperFunctional.is_gga
      ~SuperFunctional.is_libxc_func
      ~SuperFunctional.is_meta
      ~SuperFunctional.is_x_hybrid
      ~SuperFunctional.is_x_lrc
      ~SuperFunctional.max_points
      ~SuperFunctional.name
      ~SuperFunctional.needs_grac
      ~SuperFunctional.needs_vv10
      ~SuperFunctional.needs_xc
      ~SuperFunctional.print_detail
      ~SuperFunctional.print_out
      ~SuperFunctional.set_c_alpha
      ~SuperFunctional.set_c_omega
      ~SuperFunctional.set_c_os_alpha
      ~SuperFunctional.set_c_ss_alpha
      ~SuperFunctional.set_citation
      ~SuperFunctional.set_deriv
      ~SuperFunctional.set_description
      ~SuperFunctional.set_grac_alpha
      ~SuperFunctional.set_grac_beta
      ~SuperFunctional.set_grac_shift
      ~SuperFunctional.set_lock
      ~SuperFunctional.set_max_points
      ~SuperFunctional.set_name
      ~SuperFunctional.set_vv10_b
      ~SuperFunctional.set_vv10_c
      ~SuperFunctional.set_x_alpha
      ~SuperFunctional.set_x_beta
      ~SuperFunctional.set_x_omega
      ~SuperFunctional.test_functional
      ~SuperFunctional.value
      ~SuperFunctional.values
      ~SuperFunctional.vv10_b
      ~SuperFunctional.vv10_c
      ~SuperFunctional.x_alpha
      ~SuperFunctional.x_beta
      ~SuperFunctional.x_functional
      ~SuperFunctional.x_functionals
      ~SuperFunctional.x_omega

   .. rubric:: Methods Documentation

   .. automethod:: XC_build
   .. automethod:: add_c_functional
   .. automethod:: add_x_functional
   .. automethod:: allocate
   .. automethod:: ansatz
   .. automethod:: blank
   .. automethod:: c_alpha
   .. automethod:: c_functional
   .. automethod:: c_functionals
   .. automethod:: c_omega
   .. automethod:: c_os_alpha
   .. automethod:: c_ss_alpha
   .. automethod:: citation
   .. automethod:: compute_functional
   .. automethod:: deriv
   .. automethod:: description
   .. automethod:: grac_alpha
   .. automethod:: grac_beta
   .. automethod:: grac_shift
   .. automethod:: is_c_hybrid
   .. automethod:: is_c_lrc
   .. automethod:: is_c_scs_hybrid
   .. automethod:: is_gga
   .. automethod:: is_libxc_func
   .. automethod:: is_meta
   .. automethod:: is_x_hybrid
   .. automethod:: is_x_lrc
   .. automethod:: max_points
   .. automethod:: name
   .. automethod:: needs_grac
   .. automethod:: needs_vv10
   .. automethod:: needs_xc
   .. automethod:: print_detail
   .. automethod:: print_out
   .. automethod:: set_c_alpha
   .. automethod:: set_c_omega
   .. automethod:: set_c_os_alpha
   .. automethod:: set_c_ss_alpha
   .. automethod:: set_citation
   .. automethod:: set_deriv
   .. automethod:: set_description
   .. automethod:: set_grac_alpha
   .. automethod:: set_grac_beta
   .. automethod:: set_grac_shift
   .. automethod:: set_lock
   .. automethod:: set_max_points
   .. automethod:: set_name
   .. automethod:: set_vv10_b
   .. automethod:: set_vv10_c
   .. automethod:: set_x_alpha
   .. automethod:: set_x_beta
   .. automethod:: set_x_omega
   .. automethod:: test_functional
   .. automethod:: value
   .. automethod:: values
   .. automethod:: vv10_b
   .. automethod:: vv10_c
   .. automethod:: x_alpha
   .. automethod:: x_beta
   .. automethod:: x_functional
   .. automethod:: x_functionals
   .. automethod:: x_omega
